ingress-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      name: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: ingress-nginx
