ingress-test/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /greeting
        backend:
          serviceName: producer-spring-app
          servicePort: 80
      - path: /other
        backend:
          serviceName: producer-spring-app
          servicePort: 80
